add support to conditions

--- a/Template/template.ipynb
+++ b/Template/template.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,9 +41,13 @@
     "\t\t\t\t\"Default\": \"test\"\n",
     "\t\t\t}\n",
     "\t\t},\n",
+    "\"Conditions\" : {\n",
+    "    \"CreateProdResources\" : {\"Fn::Equals\" : [{\"Ref\" : \"Environment\"}, \"prod\"]}\n",
+    "  },\n",
     "\t\t\"Resources\": {\n",
     "\t\t\t\"SNSTopiInlineCondition\": {\n",
     "\t\t\t\t\"Type\": \"Template::Git\",\n",
+    "                \"Condition\" : \"CreateProdResources\",\n",
     "\t\t\t\t\"Properties\": {\n",
     "\t\t\t\t\t\"Mode\": \"Inline\",\n",
     "\t\t\t\t\t\"Provider\": \"Codecommit\",\n",
@@ -219,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,20 +410,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tp_sns_template = TemplateLoader.loads(sns_template)\n",
+    "#tp_sns_template.resources['LowPriorityAlarm'].attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "new_template = TemplateLoader.init()\n",
     "new_template.parameters = tp_main_template.parameters\n",
+    "new_template.conditions = tp_main_template.conditions\n",
     "\n",
     "for resource in tp_main_template.resources:\n",
     "    if tp_main_template.resources[resource].resource_type.startswith('Template::'):\n",
     "        parameters = tp_main_template.resources[resource].properties['Parameters']\n",
     "        \n",
+    "        rule = None\n",
+    "        if  hasattr(tp_main_template.resources[resource], 'Condition'):\n",
+    "            key = tp_main_template.resources[resource].Condition\n",
+    "            rule = {\n",
+    "                \"key\": key,\n",
+    "                \"value\" : tp_main_template.conditions[key]\n",
+    "            }\n",
     "        tp_sns_template = TemplateLoader.loads(sns_template)\n",
     "        tp_sns_template.set_default_parameters(parameters)\n",
-    "        tp_sns_template.find_relations(to_replace=True, prefix=resource)\n",
+    "        tp_sns_template.find_relations(to_replace=True, prefix=resource, condition=rule)\n",
     "        \n",
     "        tp_sns_template.del_parameters()\n",
     "        \n",
@@ -432,7 +454,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'CreateProdResources': <troposphere.Equals at 0x10e0379d0>,\n",
+       " 'SNSTopiInlineConditionCreateProdResources': <troposphere.Equals at 0x10dfcbad0>,\n",
+       " 'CreateProdResourcesSNSTopiInlineConditionCreateProdResources': <troposphere.And at 0x10dfd2410>,\n",
+       " 'SNSTopiInlineCreateProdResources': <troposphere.Equals at 0x10dfc4150>,\n",
+       " 'SNSTopicS3CreateProdResources': <troposphere.Equals at 0x10dcf5490>,\n",
+       " 'SNSTopicNestedCreateProdResources': <troposphere.Equals at 0x10dfcb7d0>}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_template.conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -440,6 +487,14 @@
      "output_type": "stream",
      "text": [
       "Conditions:\n",
+      "  CreateProdResources: !Equals\n",
+      "    - !Ref 'Environment'\n",
+      "    - prod\n",
+      "  CreateProdResourcesSNSTopiInlineConditionCreateProdResources: !And\n",
+      "    - !Condition 'SNSTopiInlineConditionCreateProdResources'\n",
+      "    - !Equals\n",
+      "      - !Ref 'Environment'\n",
+      "      - prod\n",
       "  SNSTopiInlineConditionCreateProdResources: !Equals\n",
       "    - !Ref 'Environment'\n",
       "    - prod\n",
@@ -458,6 +513,7 @@
       "  [SNSTopicNested] SNS Topics for alarms\n",
       "Outputs:\n",
       "  SNSTopiInlineConditionHighPriorityAlarm:\n",
+      "    Condition: CreateProdResources\n",
       "    Description: '[SNSTopiInlineCondition] High priority SNS topic ARN'\n",
       "    Export:\n",
       "      Name: !Join\n",
@@ -470,6 +526,7 @@
       "              - !Ref 'Environment'\n",
       "    Value: !Ref 'SNSTopiInlineConditionHighPriorityAlarm'\n",
       "  SNSTopiInlineConditionLowPriorityAlarm:\n",
+      "    Condition: CreateProdResources\n",
       "    Description: '[SNSTopiInlineCondition] Low priority SNS topic ARN'\n",
       "    Export:\n",
       "      Name: !Join\n",
@@ -482,6 +539,7 @@
       "              - !Ref 'AWS::StackName'\n",
       "    Value: !Ref 'SNSTopiInlineConditionLowPriorityAlarm'\n",
       "  SNSTopiInlineConditionLowPriorityAlarmSelect:\n",
+      "    Condition: CreateProdResources\n",
       "    Description: '[SNSTopiInlineCondition] Low priority SNS topic ARN'\n",
       "    Export:\n",
       "      Name: !Join\n",
@@ -494,6 +552,7 @@
       "              - !Ref 'AWS::StackName'\n",
       "    Value: !Ref 'SNSTopiInlineConditionLowPriorityAlarm'\n",
       "  SNSTopiInlineConditionLowPriorityAlarmSplit:\n",
+      "    Condition: CreateProdResources\n",
       "    Description: '[SNSTopiInlineCondition] Low priority SNS topic ARN'\n",
       "    Export:\n",
       "      Name: !Join\n",
@@ -506,6 +565,7 @@
       "              - a|b|c\n",
       "    Value: !Ref 'SNSTopiInlineConditionLowPriorityAlarm'\n",
       "  SNSTopiInlineConditionMediumPriorityAlarm:\n",
+      "    Condition: CreateProdResources\n",
       "    Description: '[SNSTopiInlineCondition] Medium priority SNS topic ARN'\n",
       "    Export:\n",
       "      Name: !Join\n",
@@ -518,6 +578,7 @@
       "              - !Ref 'Environment'\n",
       "    Value: !Ref 'SNSTopiInlineConditionMediumPriorityAlarm'\n",
       "  SNSTopiInlineConditionUrgentPriorityAlarm:\n",
+      "    Condition: CreateProdResources\n",
       "    Description: '[SNSTopiInlineCondition] Urgent priority SNS topic ARN'\n",
       "    Export:\n",
       "      Name: !Join\n",
@@ -767,6 +828,7 @@
       "      TopicName: !Ref 'RepositoryName'\n",
       "    Type: AWS::SNS::Topic\n",
       "  SNSTopiInlineConditionHighPriorityAlarm:\n",
+      "    Condition: CreateProdResources\n",
       "    Properties:\n",
       "      DisplayName: !Join\n",
       "        - ''\n",
@@ -783,7 +845,7 @@
       "          - !Ref 'Environment'\n",
       "    Type: AWS::SNS::Topic\n",
       "  SNSTopiInlineConditionLowPriorityAlarm:\n",
-      "    Condition: SNSTopiInlineConditionCreateProdResources\n",
+      "    Condition: CreateProdResourcesSNSTopiInlineConditionCreateProdResources\n",
       "    Properties:\n",
       "      DisplayName: !Join\n",
       "        - ''\n",
@@ -800,6 +862,7 @@
       "          - !Ref 'Environment'\n",
       "    Type: AWS::SNS::Topic\n",
       "  SNSTopiInlineConditionMediumPriorityAlarm:\n",
+      "    Condition: CreateProdResources\n",
       "    Properties:\n",
       "      DisplayName: !Join\n",
       "        - ''\n",
@@ -816,6 +879,7 @@
       "          - !Ref 'Environment'\n",
       "    Type: AWS::SNS::Topic\n",
       "  SNSTopiInlineConditionUrgentPriorityAlarm:\n",
+      "    Condition: CreateProdResources\n",
       "    Properties:\n",
       "      DisplayName: !Join\n",
       "        - ''\n",
